--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
     "multer": "^1.4.2",
     "xls-to-json-lc": "^0.3.4",
